# Tracking

./: CMakeLists.txt  README.md
c++/: CMakeLists.txt  example.cpp
c++/device/: logitech_c920.cpp
c++/module/: tracking.cpp
include/: logitech_c920.h  tracking.h
src/: OpticalFlowFarneback.cpp  example.cpp  logitech_c920.cpp  tracking.cpp
